@@ -537,6 +537,9 @@ Version 1.5.1 -- CVS
   - Security: Fix possible cross site scripting through the right_main
     parameter of webmail.php. This now uses a whitelist of acceptable
     values. [CVE-2006-0188]
+  - Disabled display of regexp compilation errors in local_file address
+    book backend.
+  - DOCTYPE tags are switched from quirks to standard compliance mode.
 
 Version 1.5.0 - 2 February 2004
 -------------------------------
